Bug 58320 - Weborder: UI issue on IE when selecting an item, $ symbol is cut off

--- a/skins/weborder/css/products.css
+++ b/skins/weborder/css/products.css
@@ -189,6 +189,7 @@
     top: 0;
     left: 0;
     text-align: center;
+    background: transparent;
 }
 
 .price-wrapper.product-price-wrapper {
